Gotcha + Caliper updates + python + hardware_counters + graph fixes
- Fixed deletion issues with graph
- Added new hardware_counters backend
- More stand-alone python modules
- relaxed timemory-run restrictions

--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -78,7 +78,8 @@ if(UNIX AND NOT APPLE)
 endif()
 
 set(PYTHON_SUBMODULE_FOLDERS
-    ert gperftools mpi_support plotting profiler roofline util mpi bundle components)
+    api ert gperftools mpi mpi_support plotting profiler roofline
+    util bundle component hardware_counters)
 
 set(PYTHON_SUBMODULE_FILES
     common options signals units)
