--- a/source/timemory/ert/CMakeLists.txt
+++ b/source/timemory/ert/CMakeLists.txt
@@ -1,10 +1,15 @@
 
+add_option(TIMEMORY_BUILD_ERT "Build ERT library" ON)
+
+if(NOT TIMEMORY_BUILD_ERT)
+    return()
+endif()
+
 file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
+file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 if(TIMEMORY_USE_CUDA AND CMAKE_CUDA_COMPILER)
-    file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
-                                   ${CMAKE_CURRENT_SOURCE_DIR}/*.cu)
-else()
-    file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
+    file(GLOB_RECURSE cu_source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cu)
+    list(APPEND source_files ${cu_source_files})
 endif()
 
 build_intermediate_library(
@@ -17,7 +22,6 @@ build_intermediate_library(
     SOURCES             ${source_files}
     DEPENDS             timemory-vector
                         timemory-cuda
-                        # timemory-cudart
                         timemory-timing-component
     PRIVATE_LINK        timemory-roofline-options
     PROPERTY_DEPENDS    GLOBAL)
