--- a/source/timemory/utility/CMakeLists.txt
+++ b/source/timemory/utility/CMakeLists.txt
@@ -1,4 +1,8 @@
 
+if(WIN32)
+    return()
+endif()
+
 file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
