--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ matrix:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which gcc) && CXX=$(which g++) && BUILD_TYPE=Debug && BUILD_ARGS='--build-libs static --papi --mpi --ompt --kokkos --stats --tools --cxx-standard=14'"
+        - MATRIX_EVAL="CC=$(which gcc) && CXX=$(which g++) && BUILD_TYPE=Debug && BUILD_ARGS='--build-libs static --papi --mpi --ompt --kokkos --tools --cxx-standard=14'"
     #
     # GCC 8
     - os: linux
@@ -115,7 +115,7 @@ matrix:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--build-libs static --caliper --mpi --papi --ompt --kokkos --stats --tools --cxx-standard=14'"
+        - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--build-libs static --caliper --mpi --papi --ompt --stats --tools --cxx-standard=14'"
     # ------------------------------------------------------------------------ #
     #
     #   Python 3.7
@@ -141,7 +141,7 @@ matrix:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which gcc-6) && CXX=$(which g++-6) && BUILD_TYPE=MinSizeRel && BUILD_ARGS='--build-libs shared --mpi --papi --gotcha --mpip --python --ompt --kokkos --stats --cxx-standard=14'"
+        - MATRIX_EVAL="CC=$(which gcc-6) && CXX=$(which g++-6) && BUILD_TYPE=MinSizeRel && BUILD_ARGS='--build-libs shared --papi --gotcha --python --kokkos --stats --cxx-standard=14'"
     # GCC 7
     - os: linux
       dist: bionic
@@ -225,7 +225,7 @@ matrix:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--build-libs shared --gotcha --caliper --mpi --papi --python --ompt --kokkos --stats --tools --cxx-standard=14'"
+        - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--build-libs shared --gotcha --caliper --mpi --papi --python --stats --tools --cxx-standard=14'"
 
     # ------------------------------------------------------------------------ #
 
@@ -247,11 +247,15 @@ install:
   - export ARGS="-SF --pyctest-model=Continuous --pyctest-site=Travis --python ${BUILD_ARGS}"
   - if [ -z "${BUILD_TYPE}" ]; then BUILD_TYPE=RelWithDebInfo ; fi
   - if [ -n "${COVERAGE}" ]; then ARGS="${ARGS} --coverage"; else ARGS="${ARGS} --profile=cpu"; fi
-  - travis_wait 90 python ./pyctest-runner.py -cc ${CC} -cxx ${CXX} ${ARGS} --pyctest-build-type=${BUILD_TYPE} -j 1 -- -V --output-on-failure -- ${CMAKE_ARGS}
+  - travis_wait 90 python ./pyctest-runner.py -cc ${CC} -cxx ${CXX} ${ARGS} --pyctest-build-type=${BUILD_TYPE} -j 1 -- -V --output-on-failure -- ${CMAKE_ARGS} -DCMAKE_INSTALL_PREFIX=/home/timemory-install
+  - cd build-timemory/Linux
+  - make install -j
 
 script:
   - eval "${MATRIX_EVAL}"
-  # - python -c "import timemory; print(timemory.__file__)"
+  - export TIMEMORY_PYTHON_INSTALL=/home/timemory-install/lib/python${TRAVIS_PYTHON_VERSION}/site-packages
+  - export PYTHONPATH=${TIMEMORY_PYTHON_INSTALL}:${PYTHONPATH}
+  - if [ -d "${TIMEMORY_PYTHON_INSTALL}" ]; then python -c "import timemory; print(timemory.__file__)"; fi
   - echo "Testing is Done"
 
 after_success:
