--- a/.travis.yml
+++ b/.travis.yml
@@ -161,6 +161,7 @@ matrix:
             - graphviz
             - libgoogle-perftools-dev
             - google-perftools
+            - lcov
       env:
         - MATRIX_EVAL="CC=$(which gcc-7) && CXX=$(which g++-7) && COVERAGE=1 && BUILD_ARGS='--build-libs shared --mpi --papi --caliper --mpip --python --ompt --stats --cxx-standard=17'"
     #
@@ -264,7 +265,7 @@ after_success:
   - if [ -n "${COVERAGE}" ]; then SUBMIT_COVERAGE=1; fi
   - if [ -z "$(which lcov)" ]; then SUBMIT_COVERAGE=0; fi
   # Create lcov report: capture coverage info, filter, debugging, and upload
-  - if [ "${SUBMIT_COVERAGE}" -gt 0 ]; then lcov --directory . --capture --output-file coverage.info ; fi
+  - if [ "${SUBMIT_COVERAGE}" -gt 0 ]; then lcov --directory build-timemory/Linux --capture --output-file coverage.info ; fi
   - if [ "${SUBMIT_COVERAGE}" -gt 0 ]; then lcov --remove coverage.info '/usr/*' "${HOME}"'/.cache/*' '*/external/*' --output-file coverage.info; fi
   - if [ "${SUBMIT_COVERAGE}" -gt 0 ]; then lcov --list coverage.info; fi
   - if [ "${SUBMIT_COVERAGE}" -gt 0 ]; then bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Codecov did not collect coverage reports"; fi
