--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -146,7 +146,6 @@ if(TIMEMORY_INSTALL_TREE)
 
     macro(TIMEMORY_DEPENDENT_PACKAGE _NAME _OPT)
         if(${_OPT})
-            # find_package(${_NAME} @TIMEMORY_FIND_REQUIREMENT@ ${ARGN})
             find_package(${_NAME} REQUIRED ${ARGN})
         endif()
     endmacro()
@@ -161,6 +160,7 @@ if(TIMEMORY_INSTALL_TREE)
     set(Boost_DIR "@Boost_DIR@")
     # set(Kokkos_DIR "@Kokkos_DIR@")
 
+    set(Boost_NO_BOOST_CMAKE ON CACHE BOOL "Disable use of BoostConfig.cmake")
     timemory_dependent_package(MPI      @TIMEMORY_USE_MPI@)
     timemory_dependent_package(caliper  @TIMEMORY_USE_CALIPER@)
     timemory_dependent_package(gotcha   @TIMEMORY_USE_GOTCHA@)
