Removing erroneous tests and adding updates for added python functions

--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -160,6 +160,13 @@ else:
                    'set_exit_action',
                    'timemory_init',
                    'timemory_finalize',
+                   'timemory_trace_init',
+                   'timemory_trace_finalize',
+                   'timemory_push_trace',
+                   'timemory_pop_trace',
+                   'timemory_push_region',
+                   'timemory_pop_region',
+                   'timemory_is_throttled',
                    'initialize',
                    'finalize',
                    'mpi_init',
