--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -78,45 +78,31 @@ if(UNIX AND NOT APPLE)
 endif()
 
 set(PYTHON_SUBMODULE_FOLDERS
-    api ert gperftools mpi mpi_support plotting profiler roofline
-    util bundle component hardware_counters)
+    api ert mpi mpi_support plotting profiler roofline settings
+    util bundle component hardware_counters test)
 
-set(PYTHON_SUBMODULE_FILES
-    common options signals units)
+file(GLOB PYTHON_SUBMODULE_FILES ${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/*.py)
+string(REPLACE "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/" "" PYTHON_SUBMODULE_FILES "${PYTHON_SUBMODULE_FILES}")
 
 foreach(_SUBMODULE ${PYTHON_SUBMODULE_FOLDERS})
     set(SOURCE_DIR ${PROJECT_SOURCE_DIR}/timemory/${_SUBMODULE})
-    set(BINARY_DIR ${CMAKE_BINARY_DIR}/timemory/${_SUBMODULE})
-    file(GLOB _FILES ${SOURCE_DIR}/*.py)
+    file(GLOB_RECURSE _FILES ${SOURCE_DIR}/*.py ${SOURCE_DIR}/*.py.in)
 
     # copy over the python file
     foreach(_FILE ${_FILES})
+        get_filename_component(_DIR "${_FILE}" DIRECTORY)
         get_filename_component(_FILE "${_FILE}" NAME_WE)
-        if(EXISTS ${SOURCE_DIR}/${_FILE}.py)
-            configure_file(${SOURCE_DIR}/${_FILE}.py
-                ${BINARY_DIR}/${_FILE}.py @ONLY)
-            install(FILES ${BINARY_DIR}/${_FILE}.py
-                DESTINATION ${CMAKE_INSTALL_PYTHONDIR}/${PROJECT_NAME}/${_SUBMODULE}/)
-
+        string(REPLACE "${PROJECT_SOURCE_DIR}/" "" _DIR "${_DIR}")
+        if(EXISTS ${PROJECT_SOURCE_DIR}/${_DIR}/${_FILE}.py)
+            configure_file(${PROJECT_SOURCE_DIR}/${_DIR}/${_FILE}.py
+                ${CMAKE_BINARY_DIR}/${_DIR}/${_FILE}.py @ONLY)
+        elseif(EXISTS ${PROJECT_SOURCE_DIR}/${_DIR}/${_FILE}.py.in)
+            configure_file(${PROJECT_SOURCE_DIR}/${_DIR}/${_FILE}.py.in
+                ${CMAKE_BINARY_DIR}/${_DIR}/${_FILE}.py @ONLY)
         endif()
+        install(FILES ${CMAKE_BINARY_DIR}/${_DIR}/${_FILE}.py
+            DESTINATION ${CMAKE_INSTALL_PYTHONDIR}/${_DIR})
     endforeach()
-
-    # copy over the init file
-    if(EXISTS ${SOURCE_DIR}/__init__.py)
-        configure_file(${SOURCE_DIR}/__init__.py
-            ${BINARY_DIR}/__init__.py @ONLY)
-        install(FILES ${BINARY_DIR}/__init__.py
-            DESTINATION ${CMAKE_INSTALL_PYTHONDIR}/${PROJECT_NAME}/${_SUBMODULE}/)
-    endif()
-
-    # copy over the main file
-    if(EXISTS ${SOURCE_DIR}/__main__.py)
-        configure_file(${SOURCE_DIR}/__main__.py
-            ${BINARY_DIR}/__main__.py @ONLY)
-        install(FILES ${BINARY_DIR}/__main__.py
-            DESTINATION ${CMAKE_INSTALL_PYTHONDIR}/${PROJECT_NAME}/${_SUBMODULE}/)
-    endif()
-
 endforeach()
 
 #----------------------------------------------------------------------------
@@ -167,6 +153,7 @@ install(FILES ${CMAKE_BINARY_DIR}/timemory/__init__.py
     DESTINATION ${CMAKE_INSTALL_PYTHONDIR}/${PROJECT_NAME})
 
 foreach(PYLIB_SUBMODULE ${PYTHON_SUBMODULE_FILES})
+    get_filename_component(PYLIB_SUBMODULE "${PYLIB_SUBMODULE}" NAME_WE)
     configure_file(${PROJECT_SOURCE_DIR}/timemory/${PYLIB_SUBMODULE}.py
         ${CMAKE_BINARY_DIR}/timemory/${PYLIB_SUBMODULE}.py @ONLY)
 
