is_initialized lib functions + init/fini operations + improved MPI support in cmd-line tools
- Tweaked examples
- operation::init and operation::fini handle {global,thread}_{init,finalize}
- fixed MPI initialization in tracing library

--- a/examples/ex-c/CMakeLists.txt
+++ b/examples/ex-c/CMakeLists.txt
@@ -15,4 +15,4 @@ find_package(timemory REQUIRED COMPONENTS ${COMPONENTS})
 
 add_executable(${EXE_NAME} ${EXE_NAME}.c)
 target_link_libraries(${EXE_NAME} timemory::c-example)
-install(TARGETS ${EXE_NAME} DESTINATION bin)
+install(TARGETS ${EXE_NAME} DESTINATION bin OPTIONAL)
