--- a/examples/ex-cxx-basic/CMakeLists.txt
+++ b/examples/ex-cxx-basic/CMakeLists.txt
@@ -23,4 +23,4 @@ set(TIMEMORY_EXTRACT_INTERFACE ON)
 find_package(timemory REQUIRED COMPONENTS ${COMPONENTS} OPTIONAL_COMPONENTS cxx)
 add_executable(ex_cxx_basic ex_cxx_basic.cpp)
 target_link_libraries(ex_cxx_basic timemory-cxx-basic-example)
-install(TARGETS ex_cxx_basic DESTINATION bin)
+install(TARGETS ex_cxx_basic DESTINATION bin OPTIONAL)
