--- a/examples/ex-derived/CMakeLists.txt
+++ b/examples/ex-derived/CMakeLists.txt
@@ -10,4 +10,4 @@ find_package(timemory REQUIRED COMPONENTS ${COMPONENTS})
 # headers are always available
 add_executable(ex_derived ex_derived.cpp)
 target_link_libraries(ex_derived timemory-derived-example)
-install(TARGETS ex_derived DESTINATION bin)
+install(TARGETS ex_derived DESTINATION bin OPTIONAL)
