--- a/examples/ex-ert/CMakeLists.txt
+++ b/examples/ex-ert/CMakeLists.txt
@@ -43,7 +43,7 @@ find_package(timemory REQUIRED COMPONENTS ${COMPONENTS})
 
 add_executable(ex_ert ex_ert.cpp)
 target_link_libraries(ex_ert timemory-ert-example)
-install(TARGETS ex_ert DESTINATION bin)
+install(TARGETS ex_ert DESTINATION bin COMPONENT examples OPTIONAL)
 
 if(USE_CUDA OR TIMEMORY_USE_CUDA)
     set_source_files_properties(ex_ert.cpp PROPERTIES
@@ -56,7 +56,7 @@ find_package(Kokkos 3.0 QUIET)
 if(Kokkos_FOUND AND USE_KOKKOS)
     add_executable(ex_ert_kokkos ex_ert_kokkos.cpp)
     target_link_libraries(ex_ert_kokkos timemory-ert-example Kokkos::kokkos)
-    install(TARGETS ex_ert_kokkos DESTINATION bin)
+    install(TARGETS ex_ert_kokkos DESTINATION bin COMPONENT examples OPTIONAL)
 
     if(USE_CUDA OR TIMEMORY_USE_CUDA)
         set_source_files_properties(ex_ert_kokkos.cpp PROPERTIES
