--- a/examples/ex-python/CMakeLists.txt
+++ b/examples/ex-python/CMakeLists.txt
@@ -25,12 +25,14 @@ install(
     FILES
         ${CMAKE_BINARY_DIR}/ex_python_sample
         ${CMAKE_BINARY_DIR}/ex_python_profiler
-	${CMAKE_BINARY_DIR}/ex_python_general
+        ${CMAKE_BINARY_DIR}/ex_python_general
     DESTINATION bin
     PERMISSIONS
         OWNER_EXECUTE OWNER_READ OWNER_WRITE
         GROUP_EXECUTE GROUP_READ
-        WORLD_EXECUTE WORLD_READ)
+        WORLD_EXECUTE WORLD_READ
+    COMPONENT examples
+    OPTIONAL)
 
 if(NOT TARGET pybind11::module)
     find_package(pybind11 QUIET)
@@ -67,7 +69,19 @@ target_compile_definitions(libex_python_bindings PRIVATE USE_MPI)
 target_link_libraries(libex_python_bindings PRIVATE
     MPI::MPI_C MPI::MPI_CXX ${_OMP} ${_COMPILE_OPTS})
 
-# target_link_libraries(libex_python_bindings INTERFACE timemory-ex-python-bindings)
-
 configure_file(${PROJECT_SOURCE_DIR}/ex_bindings.py
     ${CMAKE_BINARY_DIR}/ex_python_bindings @ONLY)
+
+install(TARGETS libex_python_bindings DESTINATION bin
+    COMPONENT examples OPTIONAL)
+
+install(
+    FILES
+        ${CMAKE_BINARY_DIR}/ex_python_bindings
+    DESTINATION bin
+    PERMISSIONS
+        OWNER_EXECUTE OWNER_READ OWNER_WRITE
+        GROUP_EXECUTE GROUP_READ
+        WORLD_EXECUTE WORLD_READ
+    COMPONENT examples
+    OPTIONAL)
