--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -125,7 +125,7 @@ else:
                    'plotting',
                    'roofline',
                    'bundle',
-                   'tests',
+                   'test',
                    'util',
                    'api',
                    'ert',
