Python updates and header include cleanup
- Migrated python files installation to timemory/CMakeLists.txt
- Created timemory.{trace,region} submodules
- Migrated some nvtx and cuda stuff to files in backends folder
- Moved some NVTX thread id stuff to threading backend
- Added some python extensions to cuda_event and nvtx_marker components
- Cleaned up a lot of header includes in operations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -264,6 +264,9 @@ if("${CMAKE_PROJECT_NAME}" STREQUAL "${PROJECT_NAME}")
     _timemory_activate_clang_tidy()
 endif()
 
+message(STATUS "Adding timemory (python)...")
+add_subdirectory(timemory)
+
 message(STATUS "Adding source...")
 add_subdirectory(source)
 
