--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -125,6 +125,8 @@ else:
                    'plotting',
                    'roofline',
                    'bundle',
+                   'region',
+                   'trace',
                    'test',
                    'util',
                    'api',
