--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -101,6 +101,4 @@ build_script:
   - .\outputs\runtime\%CONFIG%\ex_c_minimal.exe & exit 0
   - .\outputs\runtime\%CONFIG%\ex_c_minimal_library.exe & exit 0
   - .\outputs\runtime\%CONFIG%\ex_c_timing.exe & exit 0
-  - mkdir testpyimport
-  - cd testpyimport
-  - python.exe -c "import timemory"
+  - cmake -P tests/test-python-install-import.cmake
