--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -160,14 +160,23 @@ if(TIMEMORY_INSTALL_TREE)
     set(Boost_DIR "@Boost_DIR@")
     # set(Kokkos_DIR "@Kokkos_DIR@")
 
+    # temporarily override module path for quiet version of FindBoost.cmake
+    set(_MODULE_PATH ${CMAKE_MODULE_PATH})
+    set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/Modules ${CMAKE_MODULE_PATH})
+
     set(Boost_NO_BOOST_CMAKE ON CACHE BOOL "Disable use of BoostConfig.cmake")
     timemory_dependent_package(MPI      @TIMEMORY_USE_MPI@)
     timemory_dependent_package(caliper  @TIMEMORY_USE_CALIPER@)
     timemory_dependent_package(gotcha   @TIMEMORY_USE_GOTCHA@)
     timemory_dependent_package(OpenMP   @TIMEMORY_USE_OMPT@)
     timemory_dependent_package(Dyninst  @TIMEMORY_USE_DYNINST@)
-    timemory_dependent_package(Boost    @TIMEMORY_USE_DYNINST@ COMPONENTS "@TIMEMORY_BOOST_COMPONENTS@")
+    timemory_dependent_package(Boost    @TIMEMORY_USE_DYNINST@ QUIET COMPONENTS
+        "@TIMEMORY_BOOST_COMPONENTS@")
     # timemory_dependent_package(Kokkos @TIMEMORY_USE_KOKKOS@)
+
+    # revert cmake module path
+    set(CMAKE_MODULE_PATH ${_MODULE_PATH})
+    unset(_MODULE_PATH)
 
     include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-library-depends.cmake)
     check_required_components(@PROJECT_NAME@)
